--- a/index.html
+++ b/index.html
@@ -2,16 +2,25 @@
 <html>
 <head>
   <title>Client Form</title>
+  <style>
+    body {
+      font-family: Arial;
+      padding: 20px;
+    }
+    input, button {
+      padding: 10px;
+      margin: 8px 0;
+      width: 300px;
+    }
+  </style>
 </head>
 <body>
   <h2>Client Info Form</h2>
-  <form id="clientForm">
+  <form action="https://script.google.com/macros/s/AKfycbxe6LjyikzwB0aPInQvd1lEXZqrBQZT2ylB00AMSbb87vXsILLC8HSqu4p-mF_E0JuL/exec" method="post">
     <input type="text" name="name" placeholder="Name" required><br>
     <input type="text" name="address" placeholder="Address" required><br>
-    <input type="text" name="contact" placeholder="Contact" required><br>
+    <input type="text" name="contact" placeholder="Contact Number" required><br>
     <button type="submit">Submit</button>
   </form>
-
-  <script src="script.js"></script>
 </body>
 </html>
