--- a/list.html
+++ b/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Client Form</title>
+  <title>Item Form</title>
   <style>
     body {
       font-family: Arial;
