--- a/list.html
+++ b/list.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h2>Client Info Form</h2>
+  <h2>item Info Form</h2>
   <form action="https://script.google.com/macros/s/AKfycbxe6LjyikzwB0aPInQvd1lEXZqrBQZT2ylB00AMSbb87vXsILLC8HSqu4p-mF_E0JuL/exec" method="post">
     <input type="text" name="itemname" placeholder="Itemname" required><br>
     <input type="text" name="price" placeholder="Price" required><br>
