--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 </head>
 <body>
   <h2>Client Info Form</h2>
-  <form action="https://script.google.com/macros/s/AKfycbxe6LjyikzwB0aPInQvd1lEXZqrBQZT2ylB00AMSbb87vXsILLC8HSqu4p-mF_E0JuL/exec" method="post">
+  <form id="clientForm">
     <input type="text" name="name" placeholder="Name" required><br>
     <input type="text" name="address" placeholder="Address" required><br>
     <input type="text" name="contact" placeholder="Contact Number" required><br>
     <button type="submit">Submit</button>
   </form>
+
+  <p id="responseMessage"></p>
+
+  <script src="script.js"></script>
 </body>
 </html>
