--- a/clients.html
+++ b/clients.html
@@ -2,24 +2,7 @@
 <html>
 <head>
   <title>Client List</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      width: 80%;
-      margin: 20px auto;
-    }
-    th, td {
-      border: 1px solid #999;
-      padding: 10px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-    h2 {
-      text-align: center;
-    }
-  </style>
+  <!-- your styles… -->
 </head>
 <body>
   <h2>All Clients</h2>
